[gd_scene load_steps=57 format=3 uid="uid://e57p8aj40jm3"]

[ext_resource type="Script" path="res://Action RPG Resources/Player/Player.gd" id="1_by0ej"]
[ext_resource type="Texture2D" uid="uid://ddh2jkhcjrtja" path="res://Action RPG Resources/Player/Player.png" id="2_kh7j3"]
[ext_resource type="PackedScene" uid="uid://d3igo7hsorb0x" path="res://Action RPG Resources/Hitboxes and Hurtboxes/hitbox.tscn" id="3_boe2w"]
[ext_resource type="PackedScene" uid="uid://34vcy4pjevd5" path="res://Action RPG Resources/stats.tscn" id="3_uw05b"]
[ext_resource type="Script" path="res://Action RPG Resources/Hitboxes and Hurtboxes/SwordHitbox.gd" id="4_qq8yv"]
[ext_resource type="PackedScene" uid="uid://cxa7675idk4r4" path="res://Action RPG Resources/Hitboxes and Hurtboxes/hurtbox.tscn" id="5_oeqwo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vb5h2"]
radius = 3.41431
height = 10.0363

[sub_resource type="Animation" id="Animation_xyvj6"]
resource_name = "IdleDown"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_07q3i"]
resource_name = "IdleLeft"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jwjk0"]
resource_name = "IdleRight"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ah3tb"]
resource_name = "IdleUp"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_850nw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rel1e"]
resource_name = "attack_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_qj7fd"]
resource_name = "attack_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_p70c7"]
resource_name = "attack_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ket3o"]
resource_name = "attack_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4.71239]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_kc7s6"]
resource_name = "roll_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 58, 59]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"roll_state_finished"
}]
}

[sub_resource type="Animation" id="Animation_svdib"]
resource_name = "roll_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"roll_state_finished"
}]
}

[sub_resource type="Animation" id="Animation_llm8l"]
resource_name = "roll_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"roll_state_finished"
}]
}

[sub_resource type="Animation" id="Animation_s46li"]
resource_name = "roll_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"roll_state_finished"
}]
}

[sub_resource type="Animation" id="Animation_w7my5"]
resource_name = "run_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 18]
}

[sub_resource type="Animation" id="Animation_8e5pl"]
resource_name = "run_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 12]
}

[sub_resource type="Animation" id="Animation_btfqp"]
resource_name = "run_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 0]
}

[sub_resource type="Animation" id="Animation_cfy43"]
resource_name = "run_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1sjf"]
_data = {
"IdleDown": SubResource("Animation_xyvj6"),
"IdleLeft": SubResource("Animation_07q3i"),
"IdleRight": SubResource("Animation_jwjk0"),
"IdleUp": SubResource("Animation_ah3tb"),
"RESET": SubResource("Animation_850nw"),
"attack_down": SubResource("Animation_rel1e"),
"attack_left": SubResource("Animation_qj7fd"),
"attack_right": SubResource("Animation_p70c7"),
"attack_up": SubResource("Animation_ket3o"),
"roll_down": SubResource("Animation_kc7s6"),
"roll_left": SubResource("Animation_svdib"),
"roll_right": SubResource("Animation_llm8l"),
"roll_up": SubResource("Animation_s46li"),
"run_down": SubResource("Animation_w7my5"),
"run_left": SubResource("Animation_8e5pl"),
"run_right": SubResource("Animation_btfqp"),
"run_up": SubResource("Animation_cfy43")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xwv24"]
animation = &"attack_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wbajq"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e024d"]
animation = &"attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ayidh"]
animation = &"attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_228ot"]
blend_point_0/node = SubResource("AnimationNodeAnimation_xwv24")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_wbajq")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_e024d")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ayidh")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u6cix"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iftym"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fs44v"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_25b2y"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_fwk32"]
blend_point_0/node = SubResource("AnimationNodeAnimation_u6cix")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_iftym")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_fs44v")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_25b2y")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_31eoc"]
animation = &"roll_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ogg06"]
animation = &"roll_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0m3bo"]
animation = &"roll_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ssgwc"]
animation = &"roll_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7luoa"]
blend_point_0/node = SubResource("AnimationNodeAnimation_31eoc")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ogg06")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_0m3bo")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ssgwc")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d4pnu"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_28bh6"]
animation = &"run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uya2c"]
animation = &"run_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y4gdi"]
animation = &"run_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1j65t"]
blend_point_0/node = SubResource("AnimationNodeAnimation_d4pnu")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_28bh6")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_uya2c")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_y4gdi")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qnmib"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oqbj3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bd53c"]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t0ox7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k0bnc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bdfp0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tsor1"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_x77ko"]
states/attack/node = SubResource("AnimationNodeBlendSpace2D_228ot")
states/attack/position = Vector2(433, 227)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_fwk32")
states/idle/position = Vector2(354, 100)
states/roll/node = SubResource("AnimationNodeBlendSpace2D_7luoa")
states/roll/position = Vector2(460, 2)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_1j65t")
states/walk/position = Vector2(621, 100)
transitions = ["idle", "walk", SubResource("AnimationNodeStateMachineTransition_qnmib"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_oqbj3"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_bd53c"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_t0ox7"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_k0bnc"), "roll", "idle", SubResource("AnimationNodeStateMachineTransition_bdfp0"), "idle", "roll", SubResource("AnimationNodeStateMachineTransition_tsor1")]
graph_offset = Vector2(1, -38)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_xcjsd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4l40s"]
radius = 9.265

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x8kc0"]
radius = 4.8097
height = 16.9336

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_by0ej")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9.5)
texture = ExtResource("2_kh7j3")
hframes = 60
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.0936432, -0.18729)
rotation = 1.5708
scale = Vector2(1, 1.11998)
shape = SubResource("CapsuleShape2D_vb5h2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p1sjf")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_x77ko")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_xcjsd")
parameters/attack/blend_position = Vector2(0, 1)
parameters/idle/blend_position = Vector2(0, 1)
parameters/roll/blend_position = Vector2(0, 1)
parameters/walk/blend_position = Vector2(0, 1)

[node name="HitboxPivot" type="Marker2D" parent="."]
position = Vector2(0, -4)
gizmo_extents = 8.0

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource("3_boe2w")]
position = Vector2(15, 0)
collision_layer = 8
collision_mask = 0
script = ExtResource("4_qq8yv")

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
position = Vector2(-0.18729, -1.12373)
shape = SubResource("CapsuleShape2D_4l40s")

[node name="Hurtbox" parent="." instance=ExtResource("5_oeqwo")]
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_x8kc0")

[node name="Stats" parent="." instance=ExtResource("3_uw05b")]
max_health = 4

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Camera2D")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="HitboxPivot/SwordHitbox"]
[editable path="Hurtbox"]
